--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -124,7 +124,7 @@
             app:layout_constraintTop_toBottomOf="@id/cl_my_login">
 
             <ImageView
-                android:id="@+id/iv_my_notification"
+                android:id="@+id/iv_my_terms"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
@@ -135,7 +135,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_my_notification"
+                android:id="@+id/tv_my_terms"
                 style="@style/body_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -143,7 +143,7 @@
                 android:layout_marginBottom="10dp"
                 android:text="서비스 이용 약관"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iv_my_notification"
+                app:layout_constraintStart_toEndOf="@id/iv_my_terms"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
@@ -207,7 +207,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_my_favorite"
             android:layout_width="match_parent"
-            android:layout_height="320dp"
+            android:layout_height="280dp"
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/user_cl_bg_white_gradient_gray"
@@ -238,7 +238,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_favorite"
                 android:layout_width="300dp"
-                android:layout_height="220dp"
+                android:layout_height="180dp"
                 android:layout_marginTop="20dp"
                 app:cardCornerRadius="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -248,7 +248,7 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/vp2_favorite"
                     android:layout_width="300dp"
-                    android:layout_height="220dp" />
+                    android:layout_height="180dp" />
 
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
