--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -27,12 +27,12 @@
         <TextView
             android:id="@+id/tv_medicine_name"
             android:layout_width="0dp"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:paddingEnd="24dp"
             android:ellipsize="end"
             android:singleLine="true"
             android:hint="제품명"
-            style="@style/subtitle"
+            style="@style/body"
             android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -41,11 +41,11 @@
 
         <TextView
             android:id="@+id/tv_medicine_type"
-            style="@style/caption"
+            style="@style/caption_gray"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:ellipsize="end"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:hint="제품타입"
             android:paddingEnd="32dp"
             android:singleLine="true"
@@ -62,7 +62,7 @@
             android:layout_marginTop="4dp"
             android:layout_gravity="center_horizontal"
             android:translationZ="1dp"
-            android:checked="false"
+
             android:textOn=""
             android:textOff=""
             android:src="@drawable/baseline_arrow_circle_right_24dp"
