--- a/app/src/main/res/layout/item_searchfilter.xml
+++ b/app/src/main/res/layout/item_searchfilter.xml
@@ -1,26 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="20dp"
-    android:paddingHorizontal="24dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/effect_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="증상타이틀"
-        style="@style/body_b"
-        android:gravity="center_vertical|start"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/effect_chipgroup"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/detail_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/effect_title"
-        app:layout_constraintStart_toStartOf="@+id/effect_title"/>
+        android:clickable="true"
+
+        android:padding="16dp"
+        android:layout_marginHorizontal="16dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center">
+
+                    <ImageView
+                        android:id="@+id/detail_iv_medicine"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/medicine"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/detail_tv_name"
+                        style="@style/subtitle_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:hint="콜키퍼 시럽"
+                        app:layout_constraintStart_toStartOf="@+id/detail_iv_medicine"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_iv_medicine" />
+
+                    <!-- enterprise: 업체명-->
+                    <TextView
+                        android:id="@+id/detail_tv_enterprise_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/enterprise"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_name"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_name" />
+                    <TextView
+                        android:id="@+id/detail_tv_enterprise"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_enterprise_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_enterprise_title" />
+                    <!--effect:효과:-->
+                    <TextView
+                        android:id="@+id/detail_tv_effect_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/effect"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_enterprise_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_enterprise" />
+                    <TextView
+                        android:id="@+id/detail_tv_effect"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_effect_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_effect_title" />
+                    <!--instructions:복용법-->
+                    <TextView
+                        android:id="@+id/detail_tv_instructions_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/instructions"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_effect_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_effect" />
+                    <TextView
+                        android:id="@+id/detail_tv_instructions"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_instructions_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_instructions_title" />
+                    <!--warning: 주의:-->
+                    <TextView
+                        android:id="@+id/detail_tv_warning_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/warning"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_instructions_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_instructions" />
+                    <TextView
+                        android:id="@+id/detail_tv_warning"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_warning_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_warning_title" />
+                    <!--caution:경고:-->
+                    <TextView
+                        android:id="@+id/detail_tv_caution_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/caution"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_warning_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_warning" />
+                    <TextView
+                        android:id="@+id/detail_tv_caution"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_caution_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_caution_title" />
+                    <!--interaction:상호 작용:-->
+                    <TextView
+                        android:id="@+id/detail_tv_interaction_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/interaction"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_caution_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_caution" />
+                    <TextView
+                        android:id="@+id/detail_tv_interaction"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_interaction_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_interaction_title" />
+                    <!--sideEffect:부작용:-->
+                    <TextView
+                        android:id="@+id/detail_tv_sideEffect_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/sideEffect"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_interaction_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_interaction" />
+                    <TextView
+                        android:id="@+id/detail_tv_sideEffect"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_sideEffect_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_sideEffect_title" />
+                    <!--storingMethod:저장 방법:-->
+                    <TextView
+                        android:id="@+id/detail_tv_storingMethod_title"
+                        style="@style/body_b"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/storingMethod"
+                        app:layout_constraintStart_toStartOf="@+id/detail_tv_sideEffect_title"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_tv_sideEffect" />
+                    <TextView
+                        android:id="@+id/detail_tv_storingMethod"
+                        style="@style/body_b"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:hint="@string/no_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_tv_storingMethod_title"
+                        app:layout_constraintTop_toTopOf="@+id/detail_tv_storingMethod_title" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
