--- a/app/src/main/res/layout/bottomsheet_map_list.xml
+++ b/app/src/main/res/layout/bottomsheet_map_list.xml
@@ -6,9 +6,9 @@
     android:id="@+id/bottomsheet_map_list_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bottom_sheet_white_20"
-    android:paddingTop="16dp"
-    android:paddingBottom="54dp"
+    android:background="@color/white"
+    android:paddingTop="20dp"
+    android:paddingBottom="16dp"
     app:behavior_draggable="true"
     app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -17,7 +17,7 @@
         android:id="@+id/materialDivider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/close_bottom_sheet_list" />
@@ -25,7 +25,7 @@
     <ImageView
         android:id="@+id/close_bottom_sheet_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:paddingStart="20dp"
         android:paddingEnd="16dp"
         app:layout_constraintStart_toStartOf="parent"
