--- a/app/src/main/res/layout/bottomsheet_repeat_cycle.xml
+++ b/app/src/main/res/layout/bottomsheet_repeat_cycle.xml
@@ -147,10 +147,9 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/tv_custom"
+            android:id="@+id/et_custom"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="3"
             android:textColorHint="@color/gray"
             android:gravity="end|center_horizontal"
             style="@style/body"
@@ -176,7 +175,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_custom"/>
+            app:layout_constraintTop_toBottomOf="@+id/et_custom"/>
 
         <TextView
             android:id="@+id/tv_custom_caption"
@@ -202,6 +201,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
