--- a/app/src/main/res/layout/fragment_search_history.xml
+++ b/app/src/main/res/layout/fragment_search_history.xml
@@ -24,6 +24,7 @@
             android:text="검색 기록"/>
 
         <TextView
+            android:id="@+id/search_history_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -56,12 +57,34 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="1">
-        <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/subtitle_b"
-            android:paddingVertical="4dp"
-            android:text="검색한 약"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/medicine_history_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/subtitle_b"
+                android:paddingVertical="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="검색한 약"/>
+
+            <TextView
+                android:id="@+id/medicine_history_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                style="@style/body_b"
+                android:textColor="@color/any_500"
+                android:text="전체 삭제"
+                app:layout_constraintTop_toTopOf="@+id/medicine_history_title"
+                app:layout_constraintBottom_toBottomOf="@+id/medicine_history_title"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/medicineList"
             android:layout_width="match_parent"
