--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -20,7 +20,7 @@
             android:layout_height="76dp"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/medicine"
+            android:src="@drawable/logo_big"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
