--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -6,11 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.schedule.ScheduleFragment"
     android:background="@color/white"
+    android:paddingTop="13dp"
+    android:paddingHorizontal="13dp"
     >
 
-    <HorizontalScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/profile_sv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         app:layout_constraintTop_toTopOf="parent"
@@ -18,7 +20,7 @@
         >
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:orientation="vertical"
@@ -40,7 +42,7 @@
                     android:orientation="horizontal"
 
                     tools:listitem="@layout/schedule_profile_item"
-                    tools:itemCount="8"
+                    tools:itemCount="4"
                     />
 
                 <androidx.cardview.widget.CardView
@@ -66,16 +68,28 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/schedule_detail_view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 app:layout_constraintTop_toBottomOf="@id/profile_sv"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
 
                 android:layout_marginTop="13dp"
                 />
         </LinearLayout>
 
-    </HorizontalScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+    <ImageView
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:src="@drawable/bg_logo"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/login_guide_cl"
