--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -117,7 +117,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout"
         app:strokeColor="@color/gray"
-        app:strokeWidth="1dp">
+        app:strokeWidth="1dp"
+        android:visibility="gone">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -205,6 +206,7 @@
         android:id="@+id/cv_set_time"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_marginTop="8dp"
         android:layout_marginHorizontal="20dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="12dp"
